--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ h1 {
 
 div.cta {
 	bottom: 0px;
-	position: absolute;
+	position: fixed;
 	background:rgba(255, 255, 255, 0.8);
 	width: 100%;
 	height: 71px;
