--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,8 @@ div.cta {
 	position: fixed;
 	background:rgba(255, 255, 255, 0.8);
 	width: 100%;
-	height: 71px;
+	height: auto; min-height: 71px;
+	text-align: center;
 }
 
 #logo {
