Update background image for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -7,10 +7,11 @@ video {
 	-moz-transform: translate(-50%, -50%);
 	-webkit-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
-	min-width: 100%;
-	min-height: 100%;
+	/*max-width: 100%;
+	max-height: 100%;
 	width: auto;
-	height: auto;
+	height: auto;*/
+	width: 100%;
 	z-index: -100;
 	background: url("../images/splash_bg.jpg") no-repeat;
 	background-size: cover;
@@ -22,9 +23,17 @@ video {
 
 @media screen and (max-device-width: 1024px) {
 	body {
-		background: url("../images/splash_bg.jpg") #000 no-repeat center center fixed;
+		background: #000 url("../images/splash_bg.jpg") no-repeat center center fixed;
+		-webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
 	}
 	#bgvid {display: none;}
+}
+
+body {
+	background-color: #000;
 }
 
 h1 {
@@ -38,7 +47,7 @@ h1 {
 div.cta {
 	bottom: 0px;
 	position: fixed;
-	background:rgba(255, 255, 255, 0.8);
+	background: rgba(255, 255, 255, 0.8);
 	width: 100%;
 	height: auto; min-height: 71px;
 	text-align: center;
