--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ video {
 
 @media screen and (max-device-width: 1024px) {
 	body {
-		background: #000 url("../images/splash_bg.jpg") no-repeat center center fixed;
+		background: #000 url("../images/splash_bg.gif") no-repeat center center fixed;
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
 		-o-background-size: cover;
@@ -39,9 +39,24 @@ body {
 h1 {
 	color: white;
 	font-family: 'Lato', sans-serif;
-	font-weight: 300;
+	font-weight: 400;
 	text-align: center;
 	margin-top: 100px;
+	font-size: 3em;
+	text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+             0px 8px 13px rgba(0,0,0,0.1),
+             0px 18px 23px rgba(0,0,0,0.1);
+}
+
+p.subtitle {
+	color: white;
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
+	text-align: center;
+	font-size: 1.5em;
+	text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+             0px 8px 13px rgba(0,0,0,0.1),
+             0px 18px 23px rgba(0,0,0,0.1);	
 }
 
 div.cta {
