--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ h1 {
 	font-family: 'Lato', sans-serif;
 	font-weight: 400;
 	text-align: center;
-	margin-top: 100px;
+	margin-top: 5%;
 	font-size: 3em;
 	text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
              0px 8px 13px rgba(0,0,0,0.1),
